--- a/Lab 5.2
+++ b/Lab 5.2
@@ -1,8 +1,7 @@
 import pandas as pandas_gme
 import bokeh as bo_gme
 output_notebook()
-dframe_gme = pandas_gme.read_excel("/Users/gaurishedake/Documents/MoT/Fall 2024/IFT 533/Deliverable 6 Lab 3,4,5/LAB_5.xlsx",
-sheet_name = 'STGC 2020')
+dframe_gme = pandas_gme.read_excel("/Users/gaurishedake/Documents/MoT/Fall 2024/IFT 533/Deliverable 6 Lab 3,4,5/LAB_5.xlsx", sheet_name = 'STGC 2020')
 H_values = dframe_gme['Years'].tolist()
 V_values = dframe_gme['Student Percentage'].tolist()
 f_gme = figure(x_range = H_values, width = 576, height = 376,
